--- a/stylesheets/_aleksi.scss
+++ b/stylesheets/_aleksi.scss
@@ -12,7 +12,7 @@
 @import "sassy-maps";
 
 // PARTIALS
-@import "aleksi/config";
+@import "aleksi/const";
 @import "aleksi/general";
 @import "aleksi/math";
 @import "aleksi/lengths";
