--- a/stylesheets/aleksi/sides/_output-sides.scss
+++ b/stylesheets/aleksi/sides/_output-sides.scss
@@ -2,8 +2,9 @@
 // =ALEKSI - SIDE-PROPERTY
 // =============================================================================
 
-@import "aleksi/config";
+@import "aleksi/general/const";
 @import "aleksi/general/css-rule";
+@import "aleksi/const/css/layout-sides";
 @import "aleksi/sides/side-value";
 @import "aleksi/sides/reduce-sides";
 
@@ -42,7 +43,7 @@
   // output separate property if setting offset or if one side
   // should be omitted
   @if $property == 'offset' or sl-contain($values, null) {
-    @each $side in const('CSS_SIDES') {
+    @each $side in const('CSS_LAYOUT_SIDES') {
       // append the side to the property name, or use the side only for offsets
       $prop: if($property == 'offset', $side, '#{$property}-#{$side}');
       // select the side's value from the list of values
