rewrote tests using ‘true-sass’
A lot of tests are skipped, need ‘assert-tobe’ and ‘assert-nottobe’ mixins to test some manipulated values more loosely

--- a/stylesheets/aleksi/maps/_map-sort.scss
+++ b/stylesheets/aleksi/maps/_map-sort.scss
@@ -110,16 +110,5 @@
 
 @function map-sort($map, $order: null)
 {
-  @if type-of($map) != 'map' {
-    @return throw-error('map-sort():: $map must be a map, was #{inspect($map)}.');
-  }
-
-  $keys: sl-sort(map-keys($map));
-  $res: ();
-
-  @each $key in $keys {
-    $res: map-set($res, $key, map-get($map, $key));
-  }
-
-  @return $res;
+  @return map-sort-keys($map, $order);
 }
