--- a/stylesheets/aleksi/general/_is-of-type.scss
+++ b/stylesheets/aleksi/general/_is-of-type.scss
@@ -5,7 +5,7 @@
 //// @group aleksi-general
 //// @author [Yoannis Jamar](http://yoannis.me)
 
-@import "SassyLists";
+// @import "SassyLists";
 @import "aleksi/general/throw";
 @import "aleksi/lists/is-list";
 @import "aleksi/maps/is-map";
