--- a/stylesheets/aleksi/const/_decimal-space.scss
+++ b/stylesheets/aleksi/const/_decimal-space.scss
@@ -2,4 +2,4 @@
 @import "aleksi/general/define";
 
 // list of characters used in Decimal values
-define('DECIMAL_SPACE'), ('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'));
+@include define('DECIMAL_SPACE', ('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'));
