--- a/stylesheets/aleksi/const/_hexadecimal-space.scss
+++ b/stylesheets/aleksi/const/_hexadecimal-space.scss
@@ -2,4 +2,4 @@
 @import "aleksi/general/define";
 
 // list of characters used in Hexadecimal values
-define('HEXADECIMAL_SPACE', ('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'));
+@include define('HEXADECIMAL_SPACE', ('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'));
