--- a/stylesheets/aleksi/const/css/_units.scss
+++ b/stylesheets/aleksi/const/css/_units.scss
@@ -2,4 +2,4 @@
 @import "aleksi/general/define";
 
 // list of all units available in CSS
-define('CSS_UNITS', ('px', 'cm', 'mm', '%', 'ch', 'pc', 'in', 'em', 'rem', 'pt', 'ex', 'vw', 'vh', 'vmin', 'vmax', 'ms', 's', 'deg', 'rad', 'grad', 'turn', 'Hz', 'kHz', 'dpi', 'dpcm', 'dppx'));
+@include define('CSS_UNITS', ('px', 'cm', 'mm', '%', 'ch', 'pc', 'in', 'em', 'rem', 'pt', 'ex', 'vw', 'vh', 'vmin', 'vmax', 'ms', 's', 'deg', 'rad', 'grad', 'turn', 'Hz', 'kHz', 'dpi', 'dpcm', 'dppx'));
