--- a/test/tests/aleksi/maps/_map-extend.scss
+++ b/test/tests/aleksi/maps/_map-extend.scss
@@ -12,7 +12,7 @@
     @include assert-equal( map-sort(map-extend($map-a, $map-b, $map-c)), $map-abc );
   }
 
-  // @include xit('should throw an error when passed wrong arguments')
+  // @include xtest('should throw an error when passed wrong arguments')
   // {
   //   @include assert-equal( map-extend($num-list, $map-b), null );
   //   @include assert-equal( map-extend($map-a, $num-list, $map-c), null );
@@ -28,7 +28,7 @@
     @include assert-equal( map-sort(map-extend-deep($map-a, $map-b, $map-c)), $map-abc-deep );
   }
 
-  // @include xit('should throw an error when passed wrong arguments')
+  // @include xtest('should throw an error when passed wrong arguments')
   // {
   //   @include assert-equal( map-extend-deep($num-list, $map-b), null );
   //   @include assert-equal( map-extend-deep($map-a, $num-list, $map-c), null );
