--- a/test/tests/aleksi/maps/_map-filter.scss
+++ b/test/tests/aleksi/maps/_map-filter.scss
@@ -14,7 +14,7 @@
     @include assert-equal( map-filter($str-map, 'str-index', 'l'), $str-map );
   }
 
-  // @include xit('should throw an error when passed invalid arguments')
+  // @include xtest('should throw an error when passed invalid arguments')
   // {
   //   @include assert-equal( map-filter($str-list, 'str-index', 'a'), null );
   // }
@@ -28,7 +28,7 @@
     @include assert-equal( map-filter-keys($str-map-keys-inserted, 'str-index', 'lang-'), $str-map-keys-inserted );
   }
 
-  // @include xit('should throw an error when passed invalid arguments')
+  // @include xtest('should throw an error when passed invalid arguments')
   // {
   //   @include assert-equal( map-filter-keys($str-list, 'str-index', 'a'), null );
   // }
