--- a/test/tests/aleksi/maps/_map-unique.scss
+++ b/test/tests/aleksi/maps/_map-unique.scss
@@ -11,7 +11,7 @@
     @include assert-equal( map-unique(('a': 'foo', 'b': 'bar', 'c': 'foo', 'd': 'baz')), ('a': 'foo', 'b': 'bar', 'd': 'baz') );
   }
 
-  // @include xit('should throw an error when passed wrong arguments')
+  // @include xtest('should throw an error when passed wrong arguments')
   // {
   //   @include assert-equal( map-unique($str-list), null );
   // }
