--- a/test/tests/aleksi/maps/_map-walk.scss
+++ b/test/tests/aleksi/maps/_map-walk.scss
@@ -18,7 +18,7 @@
     @include assert-equal( map-walk($str-map, 'str-slice', 1, 2), $str-map-sliced );
   }
 
-  // @include xit('should throw an error when passed something else than a map')
+  // @include xtest('should throw an error when passed something else than a map')
   // {
   //   @include assert-equal( map-walk($word, 'to-upper-case'), null );
   //   @include assert-equal( map-walk($str-list, 'to-upper-case'), null );
@@ -37,7 +37,7 @@
     @include assert-equal( map-walk-keys($str-map, 'str-insert', 'lang-', 1), $str-map-keys-inserted );
   }
 
-  // @include xit('should throw an error when passed something else than a map')
+  // @include xtest('should throw an error when passed something else than a map')
   // {
   //   @include assert-equal( map-walk-keys($word, 'to-upper-case'), null );
   //   @include assert-equal( map-walk-keys($str-list, 'to-upper-case'), null );
