--- a/stylesheets/aleksi/sides/_sides-shorthand.scss
+++ b/stylesheets/aleksi/sides/_sides-shorthand.scss
@@ -4,7 +4,7 @@
 
 // =sides-shorthand( $side, $value )
 // -----------------------------------------------------------------------------
-/// Converts a value into a shorthan sides-list based on a given keyword.
+/// Converts a value into a shorthand sides-list based on a given keyword.
 /// Recognized keywords are 'all', 'ends', 'sides', 'top', 'right', 'bottom' and
 /// 'left'.
 ///
