implement lists ‘implode’ function

--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -31,6 +31,7 @@
 @import "tests/aleksi/lists/is-list";
 @import "tests/aleksi/lists/set-list-separator";
 @import "tests/aleksi/lists/prepend";
+@import "tests/aleksi/lists/implode";
 @import "tests/aleksi/lists/next";
 @import "tests/aleksi/lists/previous";
 @import "tests/aleksi/lists/walk";
