--- a/test/tests/aleksi/strings/_str-find.scss
+++ b/test/tests/aleksi/strings/_str-find.scss
@@ -8,6 +8,7 @@
 {
   @include test('should find the first occurence of given substring')
   {
+    @include assert-equal( str-find('abcd', 'a'), 1 );
     @include assert-equal( str-find('abcd', 'b'), 2 );
     @include assert-equal( str-find('abcd', 'a'), 1 );
   }
