implement ‘str-trim’, ‘str-ltrim’ and ‘str-rtrim’

--- a/test/tests/_aleksi.scss
+++ b/test/tests/_aleksi.scss
@@ -27,6 +27,7 @@
 @import "tests/aleksi/strings/str-replace";
 @import "tests/aleksi/strings/str-remove";
 @import "tests/aleksi/strings/str-explode";
+@import "tests/aleksi/strings/str-trim";
 
 // LISTS
 @import "tests/aleksi/lists/is-list";
