add ‘CSS_FORBIDDEN_CLASSNAME_CHARACTERS’ constant + import ‘define()’ in ‘aleksi/general/const’

--- a/stylesheets/aleksi/general/_const.scss
+++ b/stylesheets/aleksi/general/_const.scss
@@ -6,6 +6,7 @@
 //// @author [Hugo Giraudel]((http://hugogiraudel.com)
 
 @import "aleksi/general/throw";
+@import "aleksi/general/define";
 
 $constants: () !default;
 
