implement ‘remove-nth’ + ‘replace-nth’ + ‘map-remove-nth’ + ‘map-remove-nth’ + ‘map-insert’

--- a/stylesheets/aleksi/_lists.scss
+++ b/stylesheets/aleksi/_lists.scss
@@ -15,3 +15,5 @@
 @import "aleksi/lists/walk";
 @import "aleksi/lists/list-filter";
 @import "aleksi/lists/depth";
+@import "aleksi/lists/remove-nth";
+@import "aleksi/lists/replace-nth";
