--- a/stylesheets/aleksi/_maps.scss
+++ b/stylesheets/aleksi/_maps.scss
@@ -19,3 +19,5 @@
 @import "aleksi/maps/map-zip";
 @import "aleksi/maps/map-merge-deep";
 @import "aleksi/maps/map-extend";
+@import "aleksi/lists/map-remove-nth";
+@import "aleksi/lists/map-replace-nth";
